# agro_mesh

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig  sdkconfig-action  sdkconfig.old
.github/workflows/: main.yml
components/agro_board/: CMakeLists.txt  board.cpp  executor.cpp  executor.hpp  init_io.cpp  init_io.hpp  pinout.hpp  types.hpp
components/agro_board/include/board/: agro.hpp
components/agro_board/net/: init_resources.cpp  init_resources.hpp  make.cpp  make.hpp  net.cpp  net.hpp  send.cpp  send.hpp  task.cpp  task.hpp  types.hpp
components/agro_board/net/resources/: ac_load.cpp  packets.cpp
components/agro_board/sensor/: read_sensor.cpp
components/agro_mesh/: CMakeLists.txt  Kconfig  agro_mesh.cpp  blink.hpp  init.hpp  storage.cpp  storage.hpp
components/agro_mesh/include/agro/: helper.hpp  mesh.hpp  modules.hpp  types.hpp  version.hpp
components/agro_mesh/modules/app/: app.cpp  app.hpp  environment.hpp  executor.cpp  executor.hpp  task.cpp
components/agro_mesh/modules/app/app_list/hello/: Makefile
components/agro_mesh/modules/app/app_list/led/: Makefile  README.md
components/agro_mesh/modules/app/app_list/led/main/: main.c
components/agro_mesh/modules/app/app_list/outputs/: .gitignore  README.md
components/agro_mesh/modules/clock/: helper.cpp  helper.hpp  rtc_time.cpp  rtc_time.hpp
components/agro_mesh/modules/executor/: executor.cpp  executor.hpp
components/agro_mesh/modules/job/: job.cpp  job.hpp  job_define.hpp  job_task.cpp  job_task.hpp
components/agro_mesh/modules/job/impl/: job_impl.hpp
components/agro_mesh/modules/ota/: task.cpp  task.hpp
components/agro_mesh/net/: coap_resources.cpp  helper.cpp  helper.hpp  init_mesh.cpp  tasks.cpp  tasks.hpp
components/agro_mesh/net/impl/: helper_impl.hpp
components/agro_mesh/net/messages/: make.cpp  make.hpp  report.hpp  send.hpp  types.hpp
components/agro_mesh/net/messages/impl/: make_impl.hpp  send_impl.hpp
components/agro_mesh/net/resources/: app.cpp  discovery.cpp  job.cpp  led.cpp  net.cpp  ota.cpp  rtc.cpp  system.cpp  version.cpp
components/agro_mesh/sensor/: helper.cpp  helper.hpp  sensor_type.cpp  sensor_type.hpp  sensor_type_list.hpp
components/basic_defines/: CMakeLists.txt
components/basic_defines/include/: gpio_defs.h  hardware_defs.h
components/crc/: CMakeLists.txt  crc.cpp
components/crc/include/: crc.h
components/debug/: CMakeLists.txt  Kconfig  debug_example.c  get_type_string.c  get_type_time_string.cpp  print_chip_info.c  print_coap_info.c  print_freertos_info.c  print_ir_info.c  print_partition_info.c  print_system_info.c  print_time_info.cpp  print_types_info.c  print_wifi_info.c
components/debug/include/: debug_defs.h  debug_example.h  get_type_string.h  get_type_time_string.h  print_chip_info.h  print_coap_info.h  print_freertos_info.h  print_ir_info.h  print_partition_info.h  print_system_info.h  print_time_info.h  print_types_info.h  print_wifi_info.h
components/elfloader/: CMakeLists.txt  loader.c  loader.h
components/helper/: CMakeLists.txt  convert_char_type.c  datetime.cpp  my_string.cpp  restart_async.c  time_operations.cpp
components/helper/include/: convert_char_type.h  datetime.h  days_of_week.h  my_string.h  number.h  restart_async.h  time_operations.h
components/helper/include/helper/: sha256.hpp  types.hpp
components/helper/include/macros/: declare_macros.h  macro_basic.h  macro_list.h  macro_magic.h
components/helper/test/: my_string_test.cpp  sntp_test.cpp
components/mesh/: CMakeLists.txt
components/mesh/br/: border_router.cpp  border_router_impl.hpp  br_message.cpp
components/mesh/include/mesh/: border_router.hpp  br_types.hpp  node.hpp  node_message.hpp  node_types.hpp  types.hpp
components/mesh/node/: node.cpp  node_functions.cpp  node_message.cpp
components/mesh/test/: mesh_test.cpp
components/modules/bme280/: CMakeLists.txt  Kconfig  README.md  bme280.cpp  bme280_i2c.cpp  bme280_spi.cpp  bme280_spi3w.cpp
components/modules/bme280/include/: bme280.h  bme280_defs.h  bme280_i2c.h  bme280_spi.h  bme280_spi3w.h
components/modules/bme280/test/: bme280_i2c_test.cpp  bme280_spi3w_test.cpp  bme280_spi_test.cpp
components/modules/dallas_temperature/: CMakeLists.txt  dallas_temperature.cpp
components/modules/dallas_temperature/include/: dallas_temperature.h
components/modules/ds3231/: CMakeLists.txt  ds3231.cpp
components/modules/mpu60X0/: CMakeLists.txt  mpu60x0.cpp
components/modules/xgzp6897d/: CMakeLists.txt  xgzp6897d.cpp  xgzp6897d.hpp
components/peripherals/gpio/: CMakeLists.txt  gpio.cpp
components/peripherals/i2c_master/: CMakeLists.txt  i2c_master.cpp
components/peripherals/pwm/: CMakeLists.txt  pwm.cpp
components/protocols/onewire/: CMakeLists.txt  onewire.cpp
components/protocols/tcp_client/: CMakeLists.txt  tcp_client.cpp
main/: CMakeLists.txt  Kconfig.projbuild  agro_mesh_main.cpp  blink.hpp  defines.hpp  error.cpp  error.hpp  init.hpp  init_io.cpp  io_test.cpp  job.cpp  job.hpp  main.cpp  message.cpp  pinout.hpp  sensor_pressure_task.cpp  storage.cpp  storage.hpp  version.hpp
main/helper/: convert.cpp  convert.hpp  decompose.cpp  decompose.hpp
main/net/: coap_engine.hpp  coap_resources.cpp  init_mesh.cpp  tasks.cpp  tasks.hpp
main/net/messages/: make.cpp  make.hpp  send.hpp  types.hpp
main/net/messages/impl/: make_impl.hpp  send_impl.hpp
main/net/resources/: ac_load.cpp  app.cpp  job.cpp  led.cpp  net.cpp  ota.cpp  packets.cpp  rtc.cpp  sensors.cpp  server.cpp  system.cpp  version.cpp
main/ota/: task.cpp  task.hpp
main/sensor/: helper.cpp  helper.hpp  read_sensor.hpp  sensor_pressure_task.cpp  sensor_pressure_task.hpp  sensor_type_list.hpp
main/types/: job.cpp  job.hpp  rtc_time.cpp  rtc_time.hpp  rules.hpp  sensor_type.cpp  sensor_type.hpp  sensor_type_list.hpp
main/types/app/: app.cpp  app.hpp  task.cpp
main/types/app/app_list/hello/main/: main.c
main/types/app/app_list/hello_world/: Makefile  README.md
main/types/app/app_list/outputs/: Makefile
main/types/app/app_list/outputs/main/: main.c
(+16 files in other folders)
